[gd_scene load_steps=24 format=3 uid="uid://y2763ntb71tf"]

[ext_resource type="Script" path="res://Core/Character/Character.gd" id="1_aywxf"]
[ext_resource type="PackedScene" uid="uid://bmhp7gx70w6va" path="res://exhaustion_effect.tscn" id="2_iu6pc"]
[ext_resource type="PackedScene" uid="uid://0p2al2ahesmc" path="res://big_flesh_hit_effect.tscn" id="3_of1k3"]
[ext_resource type="Script" path="res://Core/Hitbox.gd" id="6_dvorw"]
[ext_resource type="Script" path="res://Core/NodeMaterial/MaterialNode.gd" id="7_lim1o"]
[ext_resource type="Script" path="res://Core/Stat.gd" id="7_xe5s5"]
[ext_resource type="Script" path="res://Core/Tool/SlotToolUser.gd" id="8_gt7dl"]
[ext_resource type="Resource" uid="uid://784u5sak8kjf" path="res://flesh_effect_material.tres" id="8_yacv2"]
[ext_resource type="Script" path="res://Core/Inventory/Inventory.gd" id="10_emt75"]
[ext_resource type="Script" path="res://Core/Supply/SupplyArea.gd" id="11_6p5wk"]
[ext_resource type="Script" path="res://Core/Interaction/Interactor.gd" id="11_t6hvw"]
[ext_resource type="Script" path="res://Core/PaintMap/TrackPrinter.gd" id="14_58v07"]
[ext_resource type="Script" path="res://SurfaceCast3D.gd" id="15_f5iwf"]
[ext_resource type="Script" path="res://MaterialDepositHandler.gd" id="16_7nsqm"]
[ext_resource type="Script" path="res://Core/Character/CharacterStatManager.gd" id="16_w8ojt"]
[ext_resource type="Script" path="res://Core/Attributes/EntityAttributeHandler.gd" id="17_pn34l"]
[ext_resource type="Resource" uid="uid://716w77prpogm" path="res://test_attribute_package.tres" id="18_bb2ni"]
[ext_resource type="PackedScene" uid="uid://cy3frp8328wgg" path="res://character_graphics.tscn" id="18_c7imj"]
[ext_resource type="Script" path="res://Core/PaintMap/Printer.gd" id="41_eid74"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_greoe"]
height = 0.25

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2hw1e"]
radius = 0.3
height = 1.8

[sub_resource type="CylinderShape3D" id="CylinderShape3D_gsofm"]
radius = 0.25

[sub_resource type="CylinderShape3D" id="CylinderShape3D_fk3f4"]
radius = 1.0

[node name="Character" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 131
axis_lock_linear_y = true
axis_lock_angular_x = true
axis_lock_angular_z = true
script = ExtResource("1_aywxf")
character_body_layer = 2
exhaustion_effect_scene = ExtResource("2_iu6pc")
impact_effect = ExtResource("3_of1k3")

[node name="EntityAttributeHandler" type="Node" parent="."]
script = ExtResource("17_pn34l")
attributes = ExtResource("18_bb2ni")

[node name="DeadCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.13, 0)
shape = SubResource("CylinderShape3D_greoe")
disabled = true

[node name="FleshMaterial" type="Node" parent="DeadCollisionShape"]
script = ExtResource("7_lim1o")
material = ExtResource("8_yacv2")

[node name="AliveCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_2hw1e")

[node name="FleshMaterial" type="Node" parent="AliveCollisionShape"]
script = ExtResource("7_lim1o")
material = ExtResource("8_yacv2")

[node name="Hitbox" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 4
collision_mask = 0
script = ExtResource("6_dvorw")
damage_reduction = 25

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
shape = SubResource("CylinderShape3D_gsofm")

[node name="FleshMaterial" type="Node" parent="Hitbox/CollisionShape3D"]
script = ExtResource("7_lim1o")
material = ExtResource("8_yacv2")

[node name="DeadHitbox" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.125, 0)
collision_layer = 4
collision_mask = 0
script = ExtResource("6_dvorw")

[node name="CollisionShape3D" type="CollisionShape3D" parent="DeadHitbox"]
shape = SubResource("CylinderShape3D_greoe")

[node name="FleshMaterial" type="Node" parent="DeadHitbox/CollisionShape3D"]
script = ExtResource("7_lim1o")
material = ExtResource("8_yacv2")

[node name="Health" type="Node" parent="."]
script = ExtResource("7_xe5s5")
allow_negative = true

[node name="Energy" type="Node" parent="."]
script = ExtResource("7_xe5s5")

[node name="ToolUser" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0.25)
script = ExtResource("8_gt7dl")
tool_slots = 2

[node name="EquipmentUser" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0.25)
script = ExtResource("8_gt7dl")
tool_slots = 4

[node name="SupplyArea" type="Area3D" parent="." node_paths=PackedStringArray("inventory")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 0
collision_mask = 64
script = ExtResource("11_6p5wk")
inventory = NodePath("../Inventory")

[node name="CollisionShape3D" type="CollisionShape3D" parent="SupplyArea"]
shape = SubResource("CylinderShape3D_fk3f4")

[node name="Timer" type="Timer" parent="SupplyArea"]
autostart = true

[node name="Inventory" type="Node" parent="."]
script = ExtResource("10_emt75")

[node name="Interactor" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
target_position = Vector3(0, 0, 1)
collision_mask = 385
collide_with_areas = true
script = ExtResource("11_t6hvw")
interaction_mask = 8

[node name="Tracker" type="Node3D" parent="."]
script = ExtResource("14_58v07")

[node name="SurfaceCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00366211, 1, -0.0032959)
target_position = Vector3(0, -3, 0)
collision_mask = 3
script = ExtResource("15_f5iwf")

[node name="MaterialDepositHandler" type="Node" parent="."]
script = ExtResource("16_7nsqm")

[node name="CharacterStatManager" type="Node" parent="." node_paths=PackedStringArray("character")]
script = ExtResource("16_w8ojt")
character = NodePath("..")

[node name="CharacterGraphics" parent="." instance=ExtResource("18_c7imj")]

[node name="Printer_L" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.125, 0, 0)
script = ExtResource("41_eid74")

[node name="Printer_R" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.125, 0, 0)
script = ExtResource("41_eid74")

[node name="StunTimer" type="Timer" parent="."]
one_shot = true

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(-1, 4.37114e-08, -7.57103e-08, 0, 0.866025, 0.5, 8.74228e-08, 0.5, -0.866025, 0, 1.5, 0.136154)
light_energy = 5.0
shadow_enabled = true
spot_range = 20.0
spot_angle = 30.0

[connection signal="was_hit" from="Hitbox" to="Health" method="modify"]
[connection signal="was_hit" from="DeadHitbox" to="Health" method="modify"]
[connection signal="timeout" from="SupplyArea/Timer" to="SupplyArea" method="check_pickup"]
[connection signal="surface_changed" from="SurfaceCast3D" to="MaterialDepositHandler" method="set_base_material"]
[connection signal="material_changed" from="MaterialDepositHandler" to="." method="_on_surface_changed"]
